# sensor_ws

devel/: .catkin  .rosinstall  setup.sh
src/rplidar_launch/: CMakeLists.txt  package.xml
src/rplidar_launch/config/: laser_filter_config.yaml
src/rplidar_launch/launch/: scan_filter.launch
src/rplidar_launch/src/: laserscan_to_pointcloud.cpp  stop_when_too_close.cpp
